# xserver-xorg-video-armada

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
common/: Makefile.am  backlight.c  bo-cache.c  bo-cache.h  boxutil.c  boxutil.h  compat-api.h  compat-list.h  cpu_access.h  drawable_desc.c  fbutil.h  gal_extension.h  get_first_pixel.c  glyph_assemble.c  glyph_assemble.h  glyph_cache.c  glyph_cache.h  glyph_extents.c  glyph_extents.h  mark.c  mark.h  pamdump.c  pamdump.h  picture_desc.c  picture_solid.c  pictureutil.h  pixmaputil.c  pixmaputil.h  prefetch.h  transform.c  unaccel.c  unaccel.h  unaccel_render.c  utils.h  xv_attribute.c  xv_attribute.h  xv_image_format.c  xv_image_format.h  xvbo.h
conf/: xorg-sample.conf
debian/: changelog  control  rules  xserver-xorg-video-armada-etnadrm.install  xserver-xorg-video-armada-etnaviv.install  xserver-xorg-video-armada-vivante.install  xserver-xorg-video-armada.install
etnaviv/: Makefile.am  etnadrm.c  etnadrm.h  etnadrm_emit.c  etnadrm_module.c  etnaviv.c  etnaviv_accel.c  etnaviv_accel.h  etnaviv_compat.h  etnaviv_dri2.c  etnaviv_dri2.h  etnaviv_dri3.c  etnaviv_dri3.h  etnaviv_drm.h  etnaviv_dummy.c  etnaviv_emit.c  etnaviv_module.c  etnaviv_op.c  etnaviv_op.h  etnaviv_render.c  etnaviv_render.h  etnaviv_utils.c  etnaviv_utils.h  etnaviv_xv.c  etnaviv_xv.h
man/: Makefile.am  armada.man
src/: Makefile.am  armada_accel.h  armada_drm.c  armada_drm.h  armada_drm_xv.c  armada_fourcc.h  armada_ioctl.h  armada_module.c  common_drm.c  common_drm.h  common_drm_dri2.c  common_drm_dri2.h  common_drm_helper.h  common_present.c  compat-api.h  gal_extension.h  utils.h  vivante.c  vivante_accel.c  vivante_accel.h  vivante_compat.h  vivante_dri2.c  vivante_dri2.h  vivante_unaccel.c  vivante_unaccel.h  vivante_unaccel_render.c  vivante_utils.c  vivante_utils.h
vivante/: Makefile.am  vivante.c  vivante.h  vivante_accel.c  vivante_accel.h  vivante_dri2.c  vivante_utils.c  vivante_utils.h
